# llama_cpu

./: .gitignore  CMakeLists.txt  README.md  structure.txt  xmake.lua
include/: common.h  generate.h  model.h  operators.h  profiler.h  threadPool.h  utlis.h
include/modules/: llamaAttention_fp32.h  llamaAttention_int4.h  llamaDecoder.h  llamaDecoder_fp32.h  llamaDecoder_int4.h  llamaDecoderlayer.h  llamaDecoderlayer_fp32.h  llamaDecoderlayer_int4.h  llamaForCausalLM.h  llamaForCausalLM_fp32.h  llamaForCausalLM_int4.h
include/operations/: bmm.h  embedding.h  linear.h  rmsNorm.h  rotaryPosEmb.h
kernel/: matmul.cpp  matmul.h  matmul_multithread.cpp  matmul_simd.cpp  matmul_speedup.cpp  matmul_unrolling.cpp  quantizer.cpp
model/: download_model.py
models/: README.md
params/: opt_params.h
src/: benchmark.cpp  generate.cpp  llamaGenerate.cpp  llamaTokenlizer.cpp  main.cpp  threadPool.cpp  utlis.cpp
src/modules/: llamaAttention.cpp  llamaAttention_fp32.cpp  llamaAttention_int4.cpp  llamaDecoder_int4.cpp  llamaDecoderlayer_int4.cpp  llamaForCausalLM_int4.cpp
src/operations/: batch_add.cpp  bmm.cpp  embedding.cpp  linear.cpp  rmsNorm.cpp  rotaryPosEmb.cpp  softmax.cpp
